# satisfaxaife

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVNOTES.md  Makefile  README-QUICK.md  README.md  config.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  config.json  display.py
app/ai/: policy.py  stateful_policy.py
docs/: dash.md  gravity_well.md  intro.md  resonance_hammer.md
imageio/: __init__.py
imageio_ffmpeg/: __init__.py
prompts/: 02-core.md  03-renderer.md  04-weapons.md  05-end.md  06-batchs.md
pymunk/: __init__.py
tests/: conftest.py  helpers.py  test_audio_ball.py  test_audio_engine.py  test_audio_weapons.py  test_ball_death_sound.py  test_ball_hit_sound.py  test_cli_config_yaml.py  test_cli_hp_suffix.py  test_cli_lazy_weapon_import.py  test_cli_multiple_seeds.py  test_cli_run.py  test_cli_team_counts_from_config.py  test_cli_timeout_continuation.py  test_config.py  test_dash.py  test_dash_collision.py  test_dash_cooldown_weapon.py  test_dash_sound.py  test_display.py  test_effect_cleanup_on_owner_death.py  test_effect_team_collision.py  test_entities.py  test_headless_match_kill_audio.py  test_hud.py  test_idle_sounds_stop_on_death.py  test_image_sanitizer.py  test_match_apply_impulse.py  test_match_audio.py  test_match_display_mode.py  test_match_logging.py  test_match_shutdown_engine.py  test_match_slowmo_timestamp.py  test_match_stop_idle.py  test_match_stop_winner_idle.py  test_match_team_counts.py  test_match_team_victory.py  test_match_view_team_filter.py  test_orbiting_rectangle.py  test_orbiting_sprite_collision.py  (+16 more)
(+114 files in other folders)
