[project]
name = "battle-balls"
version = "0.1.0"
description = "Génération de vidéos satisfaction via moteur de jeu 2D/physique."
authors = [{name="Joan (Aife)"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.6.0",
  "pymunk>=7,<8",
  "imageio>=2.36.0",
  "imageio-ffmpeg>=0.5.0",
  "typer>=0.12.0",
  "pydantic-settings>=2.4.0",
  "numpy>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pip-audit>=2.7.0",
  "bandit>=1.7.9",
  "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","W","B","C90"]
lint.ignore = ["E203","E266","E501"]  # si besoin
exclude = ["build","dist",".venv"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"

[tool.uv]
index-url = "https://pypi.org/simple"
